# video_automation

./: .editorconfig  .env.example  .gitignore  AGENT.md  BUGS.md  CHARACTER_PIPELINE_PLAN.md  IMPLEMENTATION_PLAN_CHARACTER_REFERENCE_SHEET.md  PLAN.md  PLAN_MODULE_10.md  PLAN_MODULE_11.md  PLAN_MODULE_12.md  PLAN_MODULE_13.md  PLAN_MODULE_5.md  PLAN_MODULE_6.md  PLAN_MODULE_7.md  PLAN_MODULE_8.md  PLAN_MODULE_9.md  README.md  REMOTE_GPU_SUMMARY.md  SYSTEM_AUDIT.md  ai_2d_animation_architecture.md  issue.md  package-lock.json  package.json  pyproject.toml  test_gen.py  test_pipeline_new.py
apps/api/: alembic.ini  pyproject.toml  worker.py
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_add_story_bible.py  0003_add_episode_to_scenes.py  0004_add_shot_asset_links.py  0005_add_shot_audio_video.py  0006_add_transition_and_subtitle_config.py  0007_add_post_production_config.py  0008_add_job_batch_dependency_retry.py
apps/api/app/: config.py  database.py  exceptions.py  logging.py  main.py
apps/api/app/models/: __init__.py  job.py  project.py  scene.py  shot.py
apps/api/app/routers/: assets.py  characters.py  health.py  jobs.py  projects.py  scenes.py  shots.py  story.py  ws.py
apps/api/app/services/: animation_common.py  animation_gen.py  asset_utils.py  audio_mixer.py  background_gen.py  batch.py  camera.py  character.py  character_dna.py  cleanup.py  color_grade.py  dependency.py  exporter.py  ffmpeg_utils.py  image_gen.py  job.py  keyframe_gen.py  lipsync.py  project.py  queue.py  redis.py  retry.py  scene.py  shadow.py  shot.py  storage.py  story.py  subtitle.py  timeline.py  transition.py  tts.py  vfx_overlay.py  wan2_video_gen.py  websocket.py  worker.py
apps/api/app/services/comfyui/: client.py  types.py
apps/api/app/services/llm/: base.py  google.py  ollama.py  openai_compat.py
apps/api/app/services/prompts/: compiler.py  templates.py
apps/api/tests/: conftest.py  test_animation.py  test_assets.py  test_audio.py  test_batch.py  test_characters.py  test_comfyui.py  test_exporter.py  test_image_gen.py  test_jobs.py  test_keyframe_gen.py  test_lipsync.py  test_materialize.py  test_post_production.py  test_projects.py  test_prompts.py  test_scenes.py  test_shots.py  test_story.py  test_timeline.py  test_wan2_pipeline.py  test_ws_cleanup.py
apps/cli/: pyproject.toml
apps/cli/ai_2d_cli/: client.py  main.py
(+74 files in other folders)
