[project]
name = "ai-2d-api"
version = "0.1.0"
description = "FastAPI backend for AI 2D Animation Studio"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic-settings>=2.0,<3",
    "pydantic>=2.0,<3",
    "ai-2d-shared",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "pytest-asyncio>=0.24,<1",
    "httpx>=0.28,<1",
    "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.15.14",
]
