[project]
name = "ai-2d-cli"
version = "0.1.0"
description = "CLI for AI 2D Animation Studio pipeline"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1,<9",
    "httpx>=0.28,<1",
]

[project.scripts]
pipeline = "ai_2d_cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["ai_2d_cli"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
